[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ilo4"
version = "0.1.0"
description = "Python library for iLO4 API"
readme = "README.md"
authors = ["Strice r.strice@gmail.com"]

######## DEPENDENCIES ########
[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.2"
paho-mqtt = "^2.1"
redfish = "^3.3"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.3"

######## TOOLS ########

[tool.black]
line-length = 120
target-version = ['py310']
